Texture "Generate" mapping work as global with cloth modifier #29957

Closed
opened 2012-01-22 18:10:22 +01:00 by Andrey Dubravin · 5 comments

%%%Default scene->material for default cube->add new texture->set type to clouds->mapping coordinates to Generated.
Enable cloth physics for cube.
render animation. error: texture maps as global.

to reproduce opne blend file in attachment, then render.

blender 2.61, linux x64, nvidia.%%%

%%%Default scene->material for default cube->add new texture->set type to clouds->mapping coordinates to Generated. Enable cloth physics for cube. render animation. error: texture maps as global. to reproduce opne blend file in attachment, then render. blender 2.61, linux x64, nvidia.%%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Developer's note:
Got patch which kind of making things working. Issue is caused by difference in mapping calculation for constructive and deformation modifiers. In fact, cloth is a deformation modifier but it's getting handled as constructive modifier. Attached patch makes Noconstructive modifiers (cloth, fluidsim, ...) behave exactly the same as deformation modifiers so now cloth behaves as it's expected, but more tests are needed for other Noconstructive modifiers.%%%

%%%Developer's note: Got patch which kind of making things working. Issue is caused by difference in mapping calculation for constructive and deformation modifiers. In fact, cloth is a deformation modifier but it's getting handled as constructive modifier. Attached patch makes Noconstructive modifiers (cloth, fluidsim, ...) behave exactly the same as deformation modifiers so now cloth behaves as it's expected, but more tests are needed for other Noconstructive modifiers.%%%

%%%I don't think this patch is entirely right. At least the fluidsim and remesh modifiers should get "new" generated coordinates, they can't preserve existing ones. Others like build or mask could preserve them in principle when remapping with the original index layer, but it seems the code in add_orco_dm requires the vertex count to stay the same, so they won't actually work correct.

Perhaps the simple solution is to just make the cloth modifier a deform modifier? I think it was perhaps made Nonconstructive to support cloth tearing in the future, but currently it seems to just modify vertex coordinates. %%%

%%%I don't think this patch is entirely right. At least the fluidsim and remesh modifiers should get "new" generated coordinates, they can't preserve existing ones. Others like build or mask could preserve them in principle when remapping with the original index layer, but it seems the code in add_orco_dm requires the vertex count to stay the same, so they won't actually work correct. Perhaps the simple solution is to just make the cloth modifier a deform modifier? I think it was perhaps made Nonconstructive to support cloth tearing in the future, but currently it seems to just modify vertex coordinates. %%%

%%%Ok, fixed in completely different way (switched cloth to deformation only type). Fix goes to svn now, thanks for the report, closing.%%%

%%%Ok, fixed in completely different way (switched cloth to deformation only type). Fix goes to svn now, thanks for the report, closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29957
No description provided.