Fix #29957: Texture "Generate" mapping work as global with cloth modifier

Make Cloth modifier deformation only so now it applies on orco dm properly.